# shorter

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: error.rs  lookup.rs  main.rs  search.rs  tlds.rs
web/: .prettierignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.html
web/src/lib/: bindings.ts  utils.ts
web/src/lib/components/: Button.svelte  Input.svelte  Link.svelte
web/src/lib/components/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-item.svelte  index.ts
web/src/lib/components/sheet/: index.ts  sheet-content.svelte  sheet-overlay.svelte
web/src/routes/: +layout.svelte  +page.svelte  layout.css
web/src/routes/(landing)/: +layout.svelte  +page.svelte
web/src/routes/(landing)/components/: Footer.svelte  Header.svelte
web/src/routes/404/: +page.svelte
web/src/routes/components/: Footer.svelte  Header.svelte
web/src/routes/search/: +layout.svelte  +page.svelte
