[package]
name = "shorter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.8"
